--- a/contactme.html
+++ b/contactme.html
@@ -10,7 +10,7 @@
 <body>
 <div class = "navbar">  
     <!-- Sets up the navigation bar at the top-->
-            <a href="homepage.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="projects.html">Personal Projects</a>
             <a href="contactme.html">Contact me</a>
             <a href = "https://www.linkedin.com/in/vito-cipponeri-b5bb43213/" class = "Right">
