--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class = "navbar">
 <!-- Sets up the contents of the page - To be made into a bar across the top -->
-        <a href="homepage.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="projects.html">Personal Projects</a>
         <a href="contactme.html">Contact me</a>
         <a href = "https://www.linkedin.com/in/vito-cipponeri-b5bb43213/" class = "Right">
